--- a/styles.css
+++ b/styles.css
@@ -68,3 +68,12 @@ img {
     background-color: #e5e5e5;
     padding: 0.5rem;
 }
+
+.home-btn{
+    position: absolute;
+    top: 10px;
+    left: 20px;
+    color: black;
+    text-decoration: none;
+    font-weight: bolder;
+}
